gateway-ocp.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: apigw-elastic-search
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: 
						deployment-gateway-apigw-elastic-search
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        workload.user.cattle.io/workloadselector: 
								deployment-gateway-apigw-elastic-search
    spec:
      containers:
      - env:
        - name: apigw_elasticsearch_hosts
          value: localhost:9200
        image: narraranil/apigw:10.5
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 140
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 5555
          timeoutSeconds: 2
        name: apigw
        ports:
        - containerPort: 5555
          name: 5555tcp01
          protocol: TCP
        - containerPort: 9072
          name: 9072tcp01
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /rest/apigateway/health
            port: 5555
            scheme: HTTP
          initialDelaySeconds: 140
          periodSeconds: 10
          successThreshold: 2
          timeoutSeconds: 2
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities: {}
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
      - env:
        - name: xpack.security.enabled
          value: "false"
        image: docker.elastic.co/elasticsearch/elasticsearch:5.6.4
        imagePullPolicy: Always
        name: elasticsearch
        ports:
        - containerPort: 9200
          name: 9200tcp01
          protocol: TCP
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
      dnsPolicy: ClusterFirst
      initContainers:
      - command:
        - sysctl
        - -w
        - vm.max_map_count=262144
        image: busybox
        imagePullPolicy: IfNotPresent
        name: init-sysctl
        resources: {}
        securityContext:
          privileged: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: apigateway
  namespace: gateway
spec:
  clusterIP: 10.43.213.129
  externalTrafficPolicy: Cluster
  ports:
  - name: port-1
    nodePort: 31137
    port: 5555
    protocol: TCP
    targetPort: 5555
  - name: port-2
    nodePort: 30418
    port: 9072
    protocol: TCP
    targetPort: 9072
  sessionAffinity: ClientIP
  type: NodePort
status:
loadBalancer: {}
