PushCustomerImageToK8-Appmesh.yaml
apiVersion: apps/v1 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: DEPLOYMENTNAME
  namespace: asia-presales
  labels:
   app: APPNAME
spec:
  replicas: 1 # tells deployment to run 1 pod matching the template
  selector:
    matchLabels:
      app: APPNAME
  template: # create pods using pod definition in this template
    metadata:
        labels:
          app: APPNAME
    spec:
      containers:
      - name: customer-ismicroservicesruntime
        image: DOCKERREPO/IMAGETAG
        imagePullPolicy: IfNotPresent        
        ports:
        - containerPort: 5555
      imagePullSecrets:
        - name: acctest
---
apiVersion: v1
kind: Service
metadata:
  name:  SERVICENAME
  namespace: asia-presales
  labels:
    app: APPNAME
    service: SERVICENAME
spec:
  selector:
    app: APPNAME
  type:  NodePort
  ports:
  - name:  7777http
    port:  7777
    targetPort: 7777
    protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: SERVICENAME-ingress
  namespace: asia-presales  
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - ENDPOINT.daeipresal40399.eur.ad.sag
    secretName: daeipresal40399
  rules:
  - host: ENDPOINT.daeipresal40399.eur.ad.sag
    http:
      paths:
        - path: /
          backend:
            serviceName: SERVICENAME
            servicePort: 7777
